--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="is">
 
 <head>
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔬</text></svg>">
+  <link rel="icon" href="data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🔬%3C/text%3E%3C/svg%3E">
   <meta charset="utf-8">
   <title>Verkefni 8: Strengjagreinir</title>
   <link rel="stylesheet" href="styles.css">
